fixing mobile text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,6 @@
   }
 }
 
-
-
 /* Disable text selection  */
 .disabledSelect {
   user-select: none;
@@ -82,7 +80,6 @@
 }
 
 .App-header {
-
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -90,18 +87,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-
 }
 
 .App-link {
   color: #61dafb;
-
 }
 
-.montserrat{  font-family: Montserrat, sans-serif;
+.montserrat {
+  font-family: Montserrat, sans-serif;
 }
 
-.footer{
+.footer {
   color: whitesmoke;
   background-color: darkslategray;
 }
@@ -116,8 +112,6 @@ a:visited {
   padding: 0.2em;
 }
 
-
-
 a:hover,
 a:active {
   /*background-color: rgba(44, 22, 444, 40);*/
@@ -126,7 +120,6 @@ a:active {
 }
 
 select {
-
   /* styling */
   background-color: white;
   border: thin solid blue;
@@ -146,136 +139,89 @@ select {
   -moz-appearance: none;
 }
 
-
 /* arrows */
 
 select.classic {
-  background-image:
-          linear-gradient(45deg, transparent 50%, blue 50%),
-          linear-gradient(135deg, blue 50%, transparent 50%),
-          linear-gradient(to right, skyblue, skyblue);
-  background-position:
-          calc(100% - 20px) calc(1em + 2px),
-          calc(100% - 15px) calc(1em + 2px),
-          100% 0;
-  background-size:
-          5px 5px,
-          5px 5px,
-          2.5em 2.5em;
+  background-image: linear-gradient(45deg, transparent 50%, blue 50%),
+    linear-gradient(135deg, blue 50%, transparent 50%),
+    linear-gradient(to right, skyblue, skyblue);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px), 100% 0;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
 }
 
 select.classic:focus {
-  background-image:
-          linear-gradient(45deg, white 50%, transparent 50%),
-          linear-gradient(135deg, transparent 50%, white 50%),
-          linear-gradient(to right, gray, gray);
-  background-position:
-          calc(100% - 15px) 1em,
-          calc(100% - 20px) 1em,
-          100% 0;
-  background-size:
-          5px 5px,
-          5px 5px,
-          2.5em 2.5em;
+  background-image: linear-gradient(45deg, white 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, white 50%),
+    linear-gradient(to right, gray, gray);
+  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
   border-color: grey;
   outline: 0;
 }
 
-
-
-
 select.round {
-  background-image:
-          linear-gradient(45deg, transparent 50%, gray 50%),
-          linear-gradient(135deg, gray 50%, transparent 50%),
-          radial-gradient(#ddd 70%, transparent 72%);
-  background-position:
-          calc(100% - 20px) calc(1em + 2px),
-          calc(100% - 15px) calc(1em + 2px),
-          calc(100% - .5em) .5em;
-  background-size:
-          5px 5px,
-          5px 5px,
-          1.5em 1.5em;
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    radial-gradient(#ddd 70%, transparent 72%);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px), calc(100% - 0.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1.5em 1.5em;
   background-repeat: no-repeat;
 }
 
 select.round:focus {
-  background-image:
-          linear-gradient(45deg, white 50%, transparent 50%),
-          linear-gradient(135deg, transparent 50%, white 50%),
-          radial-gradient(gray 70%, transparent 72%);
-  background-position:
-          calc(100% - 15px) 1em,
-          calc(100% - 20px) 1em,
-          calc(100% - .5em) .5em;
-  background-size:
-          5px 5px,
-          5px 5px,
-          1.5em 1.5em;
+  background-image: linear-gradient(45deg, white 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, white 50%),
+    radial-gradient(gray 70%, transparent 72%);
+  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em,
+    calc(100% - 0.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1.5em 1.5em;
   background-repeat: no-repeat;
   border-color: green;
   outline: 0;
 }
 
-
-
-
-
 select.minimal {
-  background-image:
-          linear-gradient(45deg, transparent 50%, gray 50%),
-          linear-gradient(135deg, gray 50%, transparent 50%),
-          linear-gradient(to right, #ccc, #ccc);
-  background-position:
-          calc(100% - 20px) calc(1em + 2px),
-          calc(100% - 15px) calc(1em + 2px),
-          calc(100% - 2.5em) 0.5em;
-  background-size:
-          5px 5px,
-          5px 5px,
-          1px 1.5em;
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
   background-repeat: no-repeat;
 }
 
 select.minimal:focus {
-  background-image:
-          linear-gradient(45deg, green 50%, transparent 50%),
-          linear-gradient(135deg, transparent 50%, green 50%),
-          linear-gradient(to right, #ccc, #ccc);
-  background-position:
-          calc(100% - 15px) 1em,
-          calc(100% - 20px) 1em,
-          calc(100% - 2.5em) 0.5em;
-  background-size:
-          5px 5px,
-          5px 5px,
-          1px 1.5em;
+  background-image: linear-gradient(45deg, green 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, green 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em,
+    calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
   background-repeat: no-repeat;
   border-color: green;
   outline: 0;
 }
-
 
 select:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 #000;
 }
 
-
 @media only screen and (max-width: 768px) {
-    .flashcardTable {
-        box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.6);
+  .flashcardTable {
+    box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.6);
 
-        background-color: #17bebb;
-        grid-gap: 1rem;
-        display: grid;
-        align-items: center;
-        grid-template-columns: repeat(1, 1fr);
-        /*grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));*/
-        gap: 1rem;
-        padding: 5%;
-    }
+    background-color: #17bebb;
+    grid-gap: 1rem;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    /*grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));*/
+    gap: 1rem;
+    padding: 5%;
+  }
 }
